--- a/index.html
+++ b/index.html
@@ -47,31 +47,45 @@
         </div>
       </section>
 
-      <!-- About -->
-      <section id="about" class="section">
-        <h2>About</h2>
-        <div class="split">
-          <div>
-            <h3>Evolutionary genomics + trait evolution</h3>
-            <p>
-              Short paragraph about your trajectory (PhD → postdoc), what you study, and what you’re
-              excited about. Keep it scannable.
-            </p>
-            <p>
-              Mention your strengths: long-read assemblies, pangenomes, SVs, population genomics,
-              and trait/venom phenotypes.
-            </p>
-          </div>
-          <div class="callout">
-            <p><strong>Interests</strong></p>
-            <ul>
-              <li>HiFi genomes & pangenome graphs</li>
-              <li>Structural variation and adaptation</li>
-              <li>Venom evolution & island biogeography</li>
-            </ul>
-          </div>
-        </div>
-      </section>
+<section id="about" class="section">
+  <h2>About</h2>
+
+  <div class="split">
+    <div>
+      <p>
+        I am an evolutionary biologist interested in how traits change across space and time.
+        My research focuses on understanding how molecular variation—at the level of genes and
+        genomes—translates into functional and phenotypic differences among populations and species.
+      </p>
+
+      <p>
+        Much of my work has centered on venomous snakes and the evolution of venom as a complex adaptive trait.
+        I study venom variation using integrative genomic approaches, including population genomics,
+        whole-genome sequencing, transcriptomics (RNA-seq of venom glands), and proteomic analyses of venom
+        composition. By combining molecular data with functional assays, I aim to connect genetic and genomic
+        differences to ecologically relevant variation in phenotype.
+      </p>
+
+      <p>
+        More broadly, I am interested in identifying general principles that link molecular evolution to trait
+        evolution across diverse systems. While snakes and venom have provided a powerful model, I am widely
+        interested in these questions across multiple species and traits—more recently applying similar genomic
+        frameworks to migratory behavior and migration-associated fitness differences in songbirds.
+      </p>
+    </div>
+
+    <div class="callout">
+      <p><strong>Research themes</strong></p>
+      <ul>
+        <li>Molecular → functional trait variation</li>
+        <li>Population genomics & adaptation</li>
+        <li>Transcriptomics (RNA-seq) & proteomics</li>
+        <li>Venom evolution & complex traits</li>
+        <li>Migration, movement, and fitness in songbirds</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
       <!-- Research -->
       <section id="research" class="section">
@@ -105,22 +119,61 @@
         </article>
       </section>
 
-      <!-- Publications -->
-      <section id="publications" class="section">
-        <h2>Publications</h2>
-        <ul class="pubs">
-          <li>
-            <strong>Hirst</strong> et al. (2025) <em>Evolution</em> — Island biogeography and venom complexity.
-            <a href="#" target="_blank" rel="noreferrer">DOI</a>
-          </li>
-          <li>
-            Add a few more; keep “Selected” and link out to Google Scholar.
-          </li>
-        </ul>
-        <p class="small">
-          Full list on <a href="#" target="_blank" rel="noreferrer">Google Scholar</a>.
-        </p>
-      </section>
+<section id="publications" class="section">
+  <h2>Publications</h2>
+
+  <ol class="pubs">
+    <li>
+      <strong>Hirst SR*</strong>, VanHorn CM†, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A,
+      Rosales-García RA, Castañeda-Gaytán G, Borja M, Parkinson CL, Strickland JL, Margres MJ.
+      <em>Accepted</em>. Lack of an Ontogenetic Shift in <em>Crotalus enyo cerralvensis</em> Venom Supports
+      Integration of Cranial Morphology and Venom Expression in Rattlesnakes.
+      <em>Western North American Naturalist</em>.
+    </li>
+
+    <li>
+      <strong>Hirst SR*</strong>, Beer MA, VanHorn CM†, Rautsaw RM, Franz-Chávez H, Lopez BR, Ramirez Chaparro R,
+      Rosales-García RA, Vásquez-Cruz V, Kelly-Hernández A, Salinas Amézquita SA, López Martínez DE,
+      Perez Fiol T, Rubio Rincón A, Whittington AC, Castañeda-Gaytán G, Borja M, Parkinson CL,
+      Strickland JL, Margres MJ*. 2025. Area-Induced Changes in Competition Drive Rapid Venom Complexity Evolution
+      Across Island Rattlesnakes. <strong>Editor's Choice and Cover Article</strong>. <em>Evolution</em>. 79(8):1419–1432.
+      <a href="https://doi.org/10.1093/evolut/qpaf074" target="_blank" rel="noreferrer">DOI</a>
+      · <a href="https://www.usf.edu/news/2025/what-rattlesnake-venom-can-teach-us-about-evolution.aspx" target="_blank" rel="noreferrer">USF press release</a>
+      · <a href="https://stpetecatalyst.com/usf-researchers-find-island-snakes-adapt-venom/" target="_blank" rel="noreferrer">St. Pete Catalyst</a>
+      · <a href="https://www.theguardian.com/environment/ng-interactive/2025/apr/27/rattlesnake-venom-evolves-study" target="_blank" rel="noreferrer">The Guardian</a>
+    </li>
+
+    <li>
+      Mochales Riaño G*, <strong>Hirst SR</strong>, Talavera A, Burriel-Carranza B, Pagone V, Estarellas M,
+      Busschau T, Boissinot S, Hogan MP, Tena-Garcés J, Pla D. 2025. Chromosome-level reference genome for the
+      medically important Arabian horned viper (<em>Cerastes gasperettii</em>). <em>GigaScience</em>. giaf030.
+      <a href="https://doi.org/10.1093/gigascience/giaf030" target="_blank" rel="noreferrer">DOI</a>
+    </li>
+
+    <li>
+      Neri-Castro E*, Borja M, Castañeda-Gaytán G, Alagón A, Strickland JL, Parkinson CL,
+      Gutierrez-Martínez A, Rodriguez-López B, Zarzosa V, Lomonte B, Saviola AJ, Fernández J, Smith CF,
+      Hansen KC, Pérez-Robles A, Castañeda-Pérez A, <strong>Hirst SR</strong>, Olvera F, Fernández-Badillo L,
+      Sigala J, Jones J, Montaño-Ruvalcaba C, Ramírez-Chaparro R, Acosta-Campaña G, Margres MJ. 2025.
+      Venom variation and ontogenetic changes in the <em>Crotalus molossus</em> complex: insights into composition,
+      activities, and antivenom neutralization. <em>Comparative Biochemistry and Physiology, Part C</em>. 290, 110129.
+      <a href="https://doi.org/10.1016/j.cbpc.2025.110129" target="_blank" rel="noreferrer">DOI</a>
+    </li>
+
+    <li>
+      <strong>Hirst SR*</strong>, Rautsaw RM, VanHorn CM†, Beer MA, McDonald PJ, Rosales-García RA, Lopez BR,
+      Rubio Rincón A, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A, Storfer A, Borja M, Castañeda-Gaytán G,
+      Frandsen PB, Parkinson CL, Strickland JL, Margres MJ*. 2024. Where the ‘Ruber’ Meets the Road: Using the
+      Genome of the Red Diamond Rattlesnake to Unravel the Evolutionary Processes Driving Venom Evolution.
+      <em>Genome Biology and Evolution</em>. 16(9).
+      <a href="https://doi.org/10.1093/gbe/evae198" target="_blank" rel="noreferrer">DOI</a>
+    </li>
+  </ol>
+
+  <p class="small">
+    * indicates equal contribution / lead author; † indicates co-first author (update wording if you prefer).
+  </p>
+</section>
 
       <!-- CV -->
       <section id="cv" class="section">
