--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="hero-image">
-          <img src="images/headshot.jpg" alt="Headshot of Sam Hirst" />
+          <img src="images/headsho.jpg" alt="Headshot of Sam Hirst" />
         </div>
       </section>
 
