--- a/index.html
+++ b/index.html
@@ -92,28 +92,54 @@
         <h2>Research</h2>
 
         <article class="card">
-          <img src="images/research1.jpg" alt="Example figure or photo" />
           <div>
             <h3>Pangenomes & structural variation</h3>
             <p>
-              3–5 sentences. What’s the question, what data, what methods (HiFi, assemblies, graph
-              pangenomes, SV calling), and why it matters.
-            </p>
-            <p class="small">
-              Tools: hifiasm, minimap2/wfmash, pggb/odgi, Sniffles/CuteSV, etc.
-            </p>
+ <p>
+      As a Postdoctoral Researcher in the Delmore Lab, I investigate how genomic
+      architecture shapes the evolution of complex traits. After completing my Ph.D.
+      examining how island biogeography predicts trait complexity and genetic diversity
+      in rattlesnakes, I now apply similar evolutionary principles to seasonal migration
+      in songbirds.
+    </p>
+
+    <p>
+      Specifically, I study how structural variants such
+      as inversions and large-scale insertions/deletions, contribute to variation in migratory behavior
+      and influence hybrid fitness in the Swainson’s thrush. Migration is a complex,
+      polygenic trait integrating behavior, physiology, and timing across annual cycles.
+      By combining genomics and fitness data, I aim to understand how genomic architecture constrains or
+      facilitates adaptation and speciation. 
+    </p>
+    </p>
           </div>
         </article>
 
         <article class="card">
-          <img src="images/research2.jpg" alt="Example figure or photo" />
+          <img src="images/C. enyo 2 ES 2.JPG" alt="Example figure or photo" />
           <div>
             <h3>Venom evolution on islands</h3>
             <p>
-              3–5 sentences. Island biogeography framing, ecological drivers, multi-omics angle.
+                  <p>
+      For my dissertation, I tested whether Island Biogeography Theory (IBT) can predict the
+      evolution of functional trait complexity, particularly when that trait is shaped by multiple
+      species interactions.
+    </p>
+
+    <p>
+      I used venom complexity in rattlesnakes as a model system. Venom is a polygenic trait
+      shaped by predator–prey interactions and has been shown to increase with dietary breadth.
+      Using IBT predictions about island area, isolation, and species diversity, we tested
+      explicit hypotheses about how ecological context influences venom complexity across
+      island populations of rattlesnakes in the Gulf of California. 
+    </p>
+
+    <p>
+      Beyond the phenotype, I also am examining whether IBT predicts genomic diversity. This includes
+      determining whether island characteristics shape genetic variation at the individual level (heterozygosity), as
+      well as broader aspects of genomic architecture, including structural variation.
             </p>
-            <p class="small">
-              Data: WGS/ddRAD/seq-capture, transcriptomics, HPLC, functional assays.
+            
             </p>
           </div>
         </article>
