--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       <section id="research" class="section">
         <h2>Research</h2>
 
-        <article class="card">
-          <div>
-            <h3>Pangenomes & structural variation</h3>
-            <p>
- <p>
+<article class="card">
+  <div>
+    <h3>Pangenomes & structural variation</h3>
+
+    <p>
       As a Postdoctoral Researcher in the Delmore Lab, I investigate how genomic
       architecture shapes the evolution of complex traits. After completing my Ph.D.
       examining how island biogeography predicts trait complexity and genetic diversity
@@ -104,45 +104,43 @@
     </p>
 
     <p>
-      Specifically, I study how structural variants such
-      as inversions and large-scale insertions/deletions, contribute to variation in migratory behavior
-      and influence hybrid fitness in the Swainson’s thrush. Migration is a complex,
-      polygenic trait integrating behavior, physiology, and timing across annual cycles.
-      By combining genomics and fitness data, I aim to understand how genomic architecture constrains or
-      facilitates adaptation and speciation. 
+      Specifically, I study how structural variants such as inversions and large-scale
+      insertions/deletions contribute to variation in migratory behavior and influence
+      hybrid fitness in the Swainson’s thrush. Migration is a complex, polygenic trait
+      integrating behavior, physiology, and timing across annual cycles. By combining
+      genomics and fitness data, I aim to understand how genomic architecture constrains
+      or facilitates adaptation and speciation.
     </p>
-    </p>
-          </div>
-        </article>
+  </div>
+</article>
 
-        <article class="card">
-          <img src="images/C. enyo 2 ES 2.JPG" alt="Example figure or photo" />
-          <div>
-            <h3>Venom evolution on islands</h3>
-            <p>
-                  <p>
-      For my dissertation, I tested whether Island Biogeography Theory (IBT) can predict the
-      evolution of functional trait complexity, particularly when that trait is shaped by multiple
-      species interactions.
+<article class="card">
+  <img src="images/C-enyo.jpg" alt="Island rattlesnake research" />
+
+  <div>
+    <h3>Venom evolution on islands</h3>
+
+    <p>
+      For my dissertation, I tested whether Island Biogeography Theory (IBT) can predict
+      the evolution of functional trait complexity, particularly when that trait is shaped
+      by multiple species interactions.
     </p>
 
     <p>
-      I used venom complexity in rattlesnakes as a model system. Venom is a polygenic trait
-      shaped by predator–prey interactions and has been shown to increase with dietary breadth.
-      Using IBT predictions about island area, isolation, and species diversity, we tested
-      explicit hypotheses about how ecological context influences venom complexity across
-      island populations of rattlesnakes in the Gulf of California. 
+      I used venom complexity in rattlesnakes as a model system. Venom is a polygenic
+      trait shaped by predator–prey interactions and has been shown to increase with
+      dietary breadth. Using IBT predictions about island area, isolation, and species
+      diversity, we tested explicit hypotheses about how ecological context influences
+      venom complexity across island populations of rattlesnakes in the Gulf of California.
     </p>
 
     <p>
-      Beyond the phenotype, I also am examining whether IBT predicts genomic diversity. This includes
-      determining whether island characteristics shape genetic variation at the individual level (heterozygosity), as
-      well as broader aspects of genomic architecture, including structural variation.
-            </p>
-            
-            </p>
-          </div>
-        </article>
+      Beyond phenotypes, I am also examining whether IBT predicts genomic diversity, including
+      whether island characteristics shape individual heterozygosity and broader genomic
+      architecture such as structural variation.
+    </p>
+  </div>
+</article>
       </section>
 
 <section id="publications" class="section">
@@ -213,10 +211,10 @@
       <section id="contact" class="section">
         <h2>Contact</h2>
         <div class="contact-grid">
-          <div class="contact-item"><strong>Email</strong><br />you@columbia.edu</div>
-          <div class="contact-item"><strong>GitHub</strong><br /><a href="#">github.com/yourname</a></div>
-          <div class="contact-item"><strong>Scholar</strong><br /><a href="#">Google Scholar</a></div>
-          <div class="contact-item"><strong>LinkedIn</strong><br /><a href="#">LinkedIn</a></div>
+          <div class="contact-item"><strong>Email</strong><br />srh2222@columbia.edu</div>
+          <div class="contact-item"><strong>GitHub</strong><br /><a href="#">github.com/SamuelRHirst</a></div>
+          <div class="contact-item"><strong>Scholar</strong><br /><a href="#">https://scholar.google.com/citations?user=B6NbvyMAAAAJ&hl=en</a></div>
+          <div class="contact-item"><strong>LinkedIn</strong><br /><a href="#">https://www.linkedin.com/in/samuelrhirst/</a></div>
         </div>
       </section>
 
