--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <section id="publications" class="section">
   <h2>Publications</h2>
 
-  <ol class="pubs">
+  <ol class="pubs" reversed>
     <li>
       <strong>Hirst SR*</strong>, VanHorn CM†, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A,
       Rosales-García RA, Castañeda-Gaytán G, Borja M, Parkinson CL, Strickland JL, Margres MJ.
