--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </article>
 
 <article class="card">
-  <img src="images/C-enyo.jpg" alt="Island rattlesnake research" />
+  <img src="images/Cenyo.jpg" alt="Island rattlesnake research" />
 
   <div>
     <h3>Venom evolution on islands</h3>
