--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+
+    <title>Sam Hirst | Evolutionary Genomics</title>
+    <meta
+      name="description"
+      content="Sam Hirst is an evolutionary biologist studying how genomic architecture and molecular variation translate into complex trait evolution across space and time, including venom evolution and migration."
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -30,7 +36,7 @@
         <div class="hero-text">
           <h1>Sam Hirst</h1>
           <p class="lead">
-            Postdoctoral researcher • Pangenomes & structural variation • Venom evolution
+            Postdoctoral researcher • Pangenomes &amp; structural variation • Venom evolution
           </p>
           <p class="meta">
             Columbia University • New York, NY
@@ -47,157 +53,159 @@
         </div>
       </section>
 
-<section id="about" class="section">
-  <h2>About</h2>
+      <!-- About -->
+      <section id="about" class="section">
+        <h2>About</h2>
 
-  <div class="split">
-    <div>
-      <p>
-        I am an evolutionary biologist interested in how traits change across space and time.
-        My research focuses on understanding how molecular variation—at the level of genes and
-        genomes—translates into functional and phenotypic differences among populations and species.
-      </p>
+        <div class="split">
+          <div>
+            <p>
+              I am an evolutionary biologist interested in how traits change across space and time.
+              My research focuses on understanding how molecular variation—at the level of genes and
+              genomes—translates into functional and phenotypic differences among populations and species.
+            </p>
 
-      <p>
-        Much of my work has centered on venomous snakes and the evolution of venom as a complex adaptive trait.
-        I study venom variation using integrative genomic approaches, including population genomics,
-        whole-genome sequencing, transcriptomics (RNA-seq of venom glands), and proteomic analyses of venom
-        composition. By combining molecular data with functional assays, I aim to connect genetic and genomic
-        differences to ecologically relevant variation in phenotype.
-      </p>
+            <p>
+              Much of my work has centered on venomous snakes and the evolution of venom as a complex adaptive trait.
+              I study venom variation using integrative genomic approaches, including population genomics,
+              whole-genome sequencing, transcriptomics (RNA-seq of venom glands), and proteomic analyses of venom
+              composition. By combining molecular data with functional assays, I aim to connect genetic and genomic
+              differences to ecologically relevant variation in phenotype.
+            </p>
 
-      <p>
-        More broadly, I am interested in identifying general principles that link molecular evolution to trait
-        evolution across diverse systems. While snakes and venom have provided a powerful model, I am widely
-        interested in these questions across multiple species and traits—more recently applying similar genomic
-        frameworks to migratory behavior and migration-associated fitness differences in songbirds.
-      </p>
-    </div>
+            <p>
+              More broadly, I am interested in identifying general principles that link molecular evolution to trait
+              evolution across diverse systems. While snakes and venom have provided a powerful model, I am widely
+              interested in these questions across multiple species and traits—more recently applying similar genomic
+              frameworks to migratory behavior and migration-associated fitness differences in songbirds.
+            </p>
+          </div>
 
-    <div class="callout">
-      <p><strong>Research themes</strong></p>
-      <ul>
-        <li>Molecular → functional trait variation</li>
-        <li>Population genomics & adaptation</li>
-        <li>Transcriptomics (RNA-seq) & proteomics</li>
-        <li>Venom evolution & complex traits</li>
-        <li>Migration, movement, and fitness in songbirds</li>
-      </ul>
-    </div>
-  </div>
-</section>
+          <div class="callout">
+            <p><strong>Research themes</strong></p>
+            <ul>
+              <li>Molecular → functional trait variation</li>
+              <li>Population genomics &amp; adaptation</li>
+              <li>Transcriptomics (RNA-seq) &amp; proteomics</li>
+              <li>Venom evolution &amp; complex traits</li>
+              <li>Migration, movement, and fitness in songbirds</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!-- Research -->
       <section id="research" class="section">
         <h2>Research</h2>
 
-<article class="card">
-  <div>
-    <h3>Pangenomes & structural variation</h3>
+        <article class="card">
+          <div>
+            <h3>Pangenomes &amp; structural variation</h3>
 
-    <p>
-      As a Postdoctoral Researcher in the Delmore Lab, I investigate how genomic
-      architecture shapes the evolution of complex traits. After completing my Ph.D.
-      examining how island biogeography predicts trait complexity and genetic diversity
-      in rattlesnakes, I now apply similar evolutionary principles to seasonal migration
-      in songbirds.
-    </p>
+            <p>
+              As a Postdoctoral Researcher in the Delmore Lab, I investigate how genomic
+              architecture shapes the evolution of complex traits. After completing my Ph.D.
+              examining how island biogeography predicts trait complexity and genetic diversity
+              in rattlesnakes, I now apply similar evolutionary principles to seasonal migration
+              in songbirds.
+            </p>
 
-    <p>
-      Specifically, I study how structural variants such as inversions and large-scale
-      insertions/deletions contribute to variation in migratory behavior and influence
-      hybrid fitness in the Swainson’s thrush. Migration is a complex, polygenic trait
-      integrating behavior, physiology, and timing across annual cycles. By combining
-      genomics and fitness data, I aim to understand how genomic architecture constrains
-      or facilitates adaptation and speciation.
-    </p>
-  </div>
-</article>
+            <p>
+              Specifically, I study how structural variants such as inversions and large-scale
+              insertions/deletions contribute to variation in migratory behavior and influence
+              hybrid fitness in the Swainson’s thrush. Migration is a complex, polygenic trait
+              integrating behavior, physiology, and timing across annual cycles. By combining
+              genomics and fitness data, I aim to understand how genomic architecture constrains
+              or facilitates adaptation and speciation.
+            </p>
+          </div>
+        </article>
 
-<article class="card">
-  <img src="images/Cenyo.jpg" alt="Island rattlesnake research" />
+        <article class="card">
+          <img src="images/Cenyo.jpg" alt="Island rattlesnake research" />
 
-  <div>
-    <h3>Venom evolution on islands</h3>
+          <div>
+            <h3>Venom evolution on islands</h3>
 
-    <p>
-      For my dissertation, I tested whether Island Biogeography Theory (IBT) can predict
-      the evolution of functional trait complexity, particularly when that trait is shaped
-      by multiple species interactions.
-    </p>
+            <p>
+              For my dissertation, I tested whether Island Biogeography Theory (IBT) can predict
+              the evolution of functional trait complexity, particularly when that trait is shaped
+              by multiple species interactions.
+            </p>
 
-    <p>
-      I used venom complexity in rattlesnakes as a model system. Venom is a polygenic
-      trait shaped by predator–prey interactions and has been shown to increase with
-      dietary breadth. Using IBT predictions about island area, isolation, and species
-      diversity, we tested explicit hypotheses about how ecological context influences
-      venom complexity across island populations of rattlesnakes in the Gulf of California.
-    </p>
+            <p>
+              I used venom complexity in rattlesnakes as a model system. Venom is a polygenic
+              trait shaped by predator–prey interactions and has been shown to increase with
+              dietary breadth. Using IBT predictions about island area, isolation, and species
+              diversity, we tested explicit hypotheses about how ecological context influences
+              venom complexity across island populations of rattlesnakes in the Gulf of California.
+            </p>
 
-    <p>
-      Beyond phenotypes, I am also examining whether IBT predicts genomic diversity, including
-      whether island characteristics shape individual heterozygosity and broader genomic
-      architecture such as structural variation.
-    </p>
-  </div>
-</article>
+            <p>
+              Beyond phenotype, I also examine whether IBT predicts genomic diversity, including
+              whether island characteristics shape individual heterozygosity and broader genomic
+              architecture such as structural variation.
+            </p>
+          </div>
+        </article>
       </section>
 
-<section id="publications" class="section">
-  <h2>Publications</h2>
+      <!-- Publications -->
+      <section id="publications" class="section">
+        <h2>Publications</h2>
 
-  <ol class="pubs" reversed>
-    <li>
-      <strong>Hirst SR*</strong>, VanHorn CM†, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A,
-      Rosales-García RA, Castañeda-Gaytán G, Borja M, Parkinson CL, Strickland JL, Margres MJ.
-      <em>Accepted</em>. Lack of an Ontogenetic Shift in <em>Crotalus enyo cerralvensis</em> Venom Supports
-      Integration of Cranial Morphology and Venom Expression in Rattlesnakes.
-      <em>Western North American Naturalist</em>.
-    </li>
+        <ol class="pubs" reversed>
+          <li>
+            <strong>Hirst SR*</strong>, VanHorn CM†, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A,
+            Rosales-García RA, Castañeda-Gaytán G, Borja M, Parkinson CL, Strickland JL, Margres MJ.
+            <em>Accepted</em>. Lack of an Ontogenetic Shift in <em>Crotalus enyo cerralvensis</em> Venom Supports
+            Integration of Cranial Morphology and Venom Expression in Rattlesnakes.
+            <em>Western North American Naturalist</em>.
+          </li>
 
-    <li>
-      <strong>Hirst SR*</strong>, Beer MA, VanHorn CM†, Rautsaw RM, Franz-Chávez H, Lopez BR, Ramirez Chaparro R,
-      Rosales-García RA, Vásquez-Cruz V, Kelly-Hernández A, Salinas Amézquita SA, López Martínez DE,
-      Perez Fiol T, Rubio Rincón A, Whittington AC, Castañeda-Gaytán G, Borja M, Parkinson CL,
-      Strickland JL, Margres MJ*. 2025. Area-Induced Changes in Competition Drive Rapid Venom Complexity Evolution
-      Across Island Rattlesnakes. <strong>Editor's Choice and Cover Article</strong>. <em>Evolution</em>. 79(8):1419–1432.
-      <a href="https://doi.org/10.1093/evolut/qpaf074" target="_blank" rel="noreferrer">DOI</a>
-      · <a href="https://www.usf.edu/news/2025/what-rattlesnake-venom-can-teach-us-about-evolution.aspx" target="_blank" rel="noreferrer">USF press release</a>
-      · <a href="https://stpetecatalyst.com/usf-researchers-find-island-snakes-adapt-venom/" target="_blank" rel="noreferrer">St. Pete Catalyst</a>
-      · <a href="https://www.theguardian.com/environment/ng-interactive/2025/apr/27/rattlesnake-venom-evolves-study" target="_blank" rel="noreferrer">The Guardian</a>
-    </li>
+          <li>
+            <strong>Hirst SR*</strong>, Beer MA, VanHorn CM†, Rautsaw RM, Franz-Chávez H, Lopez BR, Ramirez Chaparro R,
+            Rosales-García RA, Vásquez-Cruz V, Kelly-Hernández A, Salinas Amézquita SA, López Martínez DE,
+            Perez Fiol T, Rubio Rincón A, Whittington AC, Castañeda-Gaytán G, Borja M, Parkinson CL,
+            Strickland JL, Margres MJ*. 2025. Area-Induced Changes in Competition Drive Rapid Venom Complexity Evolution
+            Across Island Rattlesnakes. <strong>Editor's Choice and Cover Article</strong>. <em>Evolution</em>. 79(8):1419–1432.
+            <a href="https://doi.org/10.1093/evolut/qpaf074" target="_blank" rel="noreferrer">DOI</a>
+            · <a href="https://www.usf.edu/news/2025/what-rattlesnake-venom-can-teach-us-about-evolution.aspx" target="_blank" rel="noreferrer">USF press release</a>
+            · <a href="https://stpetecatalyst.com/usf-researchers-find-island-snakes-adapt-venom/" target="_blank" rel="noreferrer">St. Pete Catalyst</a>
+            · <a href="https://www.theguardian.com/environment/ng-interactive/2025/apr/27/rattlesnake-venom-evolves-study" target="_blank" rel="noreferrer">The Guardian</a>
+          </li>
 
-    <li>
-      Mochales Riaño G*, <strong>Hirst SR</strong>, Talavera A, Burriel-Carranza B, Pagone V, Estarellas M,
-      Busschau T, Boissinot S, Hogan MP, Tena-Garcés J, Pla D. 2025. Chromosome-level reference genome for the
-      medically important Arabian horned viper (<em>Cerastes gasperettii</em>). <em>GigaScience</em>. giaf030.
-      <a href="https://doi.org/10.1093/gigascience/giaf030" target="_blank" rel="noreferrer">DOI</a>
-    </li>
+          <li>
+            Mochales Riaño G*, <strong>Hirst SR</strong>, Talavera A, Burriel-Carranza B, Pagone V, Estarellas M,
+            Busschau T, Boissinot S, Hogan MP, Tena-Garcés J, Pla D. 2025. Chromosome-level reference genome for the
+            medically important Arabian horned viper (<em>Cerastes gasperettii</em>). <em>GigaScience</em>. giaf030.
+            <a href="https://doi.org/10.1093/gigascience/giaf030" target="_blank" rel="noreferrer">DOI</a>
+          </li>
 
-    <li>
-      Neri-Castro E*, Borja M, Castañeda-Gaytán G, Alagón A, Strickland JL, Parkinson CL,
-      Gutierrez-Martínez A, Rodriguez-López B, Zarzosa V, Lomonte B, Saviola AJ, Fernández J, Smith CF,
-      Hansen KC, Pérez-Robles A, Castañeda-Pérez A, <strong>Hirst SR</strong>, Olvera F, Fernández-Badillo L,
-      Sigala J, Jones J, Montaño-Ruvalcaba C, Ramírez-Chaparro R, Acosta-Campaña G, Margres MJ. 2025.
-      Venom variation and ontogenetic changes in the <em>Crotalus molossus</em> complex: insights into composition,
-      activities, and antivenom neutralization. <em>Comparative Biochemistry and Physiology, Part C</em>. 290, 110129.
-      <a href="https://doi.org/10.1016/j.cbpc.2025.110129" target="_blank" rel="noreferrer">DOI</a>
-    </li>
+          <li>
+            Neri-Castro E*, Borja M, Castañeda-Gaytán G, Alagón A, Strickland JL, Parkinson CL,
+            Gutierrez-Martínez A, Rodriguez-López B, Zarzosa V, Lomonte B, Saviola AJ, Fernández J, Smith CF,
+            Hansen KC, Pérez-Robles A, Castañeda-Pérez A, <strong>Hirst SR</strong>, Olvera F, Fernández-Badillo L,
+            Sigala J, Jones J, Montaño-Ruvalcaba C, Ramírez-Chaparro R, Acosta-Campaña G, Margres MJ. 2025.
+            Venom variation and ontogenetic changes in the <em>Crotalus molossus</em> complex: insights into composition,
+            activities, and antivenom neutralization. <em>Comparative Biochemistry and Physiology, Part C</em>. 290, 110129.
+            <a href="https://doi.org/10.1016/j.cbpc.2025.110129" target="_blank" rel="noreferrer">DOI</a>
+          </li>
 
-    <li>
-      <strong>Hirst SR*</strong>, Rautsaw RM, VanHorn CM†, Beer MA, McDonald PJ, Rosales-García RA, Lopez BR,
-      Rubio Rincón A, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A, Storfer A, Borja M, Castañeda-Gaytán G,
-      Frandsen PB, Parkinson CL, Strickland JL, Margres MJ*. 2024. Where the ‘Ruber’ Meets the Road: Using the
-      Genome of the Red Diamond Rattlesnake to Unravel the Evolutionary Processes Driving Venom Evolution.
-      <em>Genome Biology and Evolution</em>. 16(9).
-      <a href="https://doi.org/10.1093/gbe/evae198" target="_blank" rel="noreferrer">DOI</a>
-    </li>
-  </ol>
+          <li>
+            <strong>Hirst SR*</strong>, Rautsaw RM, VanHorn CM†, Beer MA, McDonald PJ, Rosales-García RA, Lopez BR,
+            Rubio Rincón A, Franz-Chávez H, Vásquez-Cruz V, Kelly-Hernández A, Storfer A, Borja M, Castañeda-Gaytán G,
+            Frandsen PB, Parkinson CL, Strickland JL, Margres MJ*. 2024. Where the ‘Ruber’ Meets the Road: Using the
+            Genome of the Red Diamond Rattlesnake to Unravel the Evolutionary Processes Driving Venom Evolution.
+            <em>Genome Biology and Evolution</em>. 16(9).
+            <a href="https://doi.org/10.1093/gbe/evae198" target="_blank" rel="noreferrer">DOI</a>
+          </li>
+        </ol>
 
-  <p class="small">
-    * indicates equal contribution / lead author; † indicates co-first author (update wording if you prefer).
-  </p>
-</section>
+        <p class="small">
+          * indicates equal contribution / lead author; † indicates co-first author (update wording if you prefer).
+        </p>
+      </section>
 
       <!-- CV -->
       <section id="cv" class="section">
@@ -211,10 +219,33 @@
       <section id="contact" class="section">
         <h2>Contact</h2>
         <div class="contact-grid">
-          <div class="contact-item"><strong>Email</strong><br />srh2222@columbia.edu</div>
-          <div class="contact-item"><strong>GitHub</strong><br /><a href="#">github.com/SamuelRHirst</a></div>
-          <div class="contact-item"><strong>Scholar</strong><br /><a href="#">https://scholar.google.com/citations?user=B6NbvyMAAAAJ&hl=en</a></div>
-          <div class="contact-item"><strong>LinkedIn</strong><br /><a href="#">https://www.linkedin.com/in/samuelrhirst/</a></div>
+          <div class="contact-item">
+            <strong>Email</strong><br />
+            <a href="mailto:srh2222@columbia.edu">srh2222@columbia.edu</a>
+          </div>
+
+          <div class="contact-item">
+            <strong>GitHub</strong><br />
+            <a href="https://github.com/SamuelRHirst" target="_blank" rel="noreferrer">github.com/SamuelRHirst</a>
+          </div>
+
+          <div class="contact-item">
+            <strong>Scholar</strong><br />
+            <a
+              href="https://scholar.google.com/citations?user=B6NbvyMAAAAJ&hl=en"
+              target="_blank"
+              rel="noreferrer"
+            >Google Scholar</a>
+          </div>
+
+          <div class="contact-item">
+            <strong>LinkedIn</strong><br />
+            <a
+              href="https://www.linkedin.com/in/samuelrhirst/"
+              target="_blank"
+              rel="noreferrer"
+            >LinkedIn</a>
+          </div>
         </div>
       </section>
 
